--- a/app/src/main/res/layout/city_list_layout.xml
+++ b/app/src/main/res/layout/city_list_layout.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/item_list"
     android:name="me.manulorenzo.citymaps.ItemListFragment"
-    android:layout_width="@dimen/item_width"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_marginLeft="16dp"
     android:layout_marginRight="16dp"
