--- a/app/src/main/res/layout/city_list_row.xml
+++ b/app/src/main/res/layout/city_list_row.xml
@@ -28,7 +28,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
-            android:gravity="left"
+            android:gravity="start"
             android:textAppearance="?attr/textAppearanceListItem"
             app:layout_constraintLeft_toRightOf="@id/cityNameTextView"
             app:layout_constraintTop_toTopOf="parent"
@@ -48,11 +48,14 @@
             style="@style/Widget.MaterialComponents.Button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
             android:layout_marginBottom="8dp"
-            android:text="About the city"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/coordinatesTextView" />
+            android:text="@string/about_button_text"
+            app:layout_constraintBottom_toBottomOf="@+id/coordinatesTextView"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintStart_toEndOf="@+id/countryCodeTextView"
+            app:layout_constraintTop_toTopOf="@+id/countryCodeTextView" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </com.google.android.material.card.MaterialCardView>
