--- a/app/src/main/res/layout/city_item_row.xml
+++ b/app/src/main/res/layout/city_item_row.xml
@@ -4,8 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="8dp"
-    app:cardElevation="5dp">
+    android:layout_margin="@dimen/city_cardview_margin"
+    app:cardElevation="@dimen/city_cardview_elevation">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
