--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -2,12 +2,12 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="info.androidhive.recyclerviewsearch.MainActivity">
+    tools:context=".city.CityListActivity">
     <item
         android:id="@+id/action_search"
         android:icon="@android:drawable/ic_search_category_default"
         android:orderInCategory="100"
-        android:title="Search"
+        android:title="@string/search_title"
         app:actionViewClass="androidx.appcompat.widget.SearchView"
         app:showAsAction="always" />
 </menu>
