--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".about.AboutActivity">
+    tools:context="me.manulorenzo.mapthecity.ui.about.AboutActivity">
 
     <LinearLayout
         android:id="@+id/infoContainer"
