--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -2,7 +2,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context=".city.CityListActivity">
+    tools:context="me.manulorenzo.mapthecity.ui.city.CityListActivity">
     <item
         android:id="@+id/action_search"
         android:icon="@android:drawable/ic_search_category_default"
